Derby app improvements
- Update dependencies
- Improve readme
- Convert to tabs
- Code style
- CSS simplification
- Quotes
- and more

--- a/labs/architecture-examples/derby/styles/todos/index.styl
+++ b/labs/architecture-examples/derby/styles/todos/index.styl
@@ -42,17 +42,9 @@
 	text-decoration: line-through;
 }
 
-section.empty-list, footer.empty-list {
-	display: none;
-}
-
-section.empty-list #toggle-all {
-	display: none;
-}
-button#clear-completed.non-completed {
-	display: none;
-}
-
+section.empty-list, footer.empty-list,
+section.empty-list #toggle-all,
+button#clear-completed.non-completed,
 #todo-list li.editing input.toggle,
 #todo-list li.editing button.destroy {
 	display: none;
