--- a/labs/architecture-examples/derby/views/todos/index.html
+++ b/labs/architecture-examples/derby/views/todos/index.html
@@ -1,5 +1,5 @@
 <Head:>
-	<link href=/base.css rel=stylesheet>
+	<link href="/base.css" rel="stylesheet">
 
 <Title:>
   DerbyJS • TodoMVC
@@ -14,7 +14,7 @@
 		<section id="main" class="{#unless _list.shown}empty-list{/}">
 			<input id="toggle-all" type="checkbox" checked="{noItems(_list.active)}" x-bind=click:clickToggleAll>
 			<label for="toggle-all">Mark all as complete</label>
-			<ul id=todo-list>{#each _list.shown}<app:todo>{/}</ul>
+			<ul id="todo-list">{#each _list.shown}<app:todo>{/}</ul>
 		</section>
 
 		<app:todoFooter>
@@ -24,13 +24,13 @@
 <todoHeader:>
 	<header id="header">
 		<h1>todos</h1>
-		<form x-bind=submit:add><input id="new-todo" placeholder="What needs to be done?" autofocus value={_newTodo}></form>
+		<form x-bind=submit:add><input id="new-todo" placeholder="What needs to be done?" value={_newTodo} autofocus></form>
 	</header>
 
 <todo:>
 	<li data-id={{id}} class="{#if .completed}completed{else}active{/}{#if ._editing} editing{/}">
 		<div>
-			<input class="toggle" type="checkbox" checked={.completed}>
+			<input class="toggle" type="checkbox" checked="{.completed}">
 			<form x-bind=submit:submitEdit>
 				<input class="text" x-bind="focus:startEdit, blur:endEdit" value="{.text}">
 			</form>
@@ -59,9 +59,8 @@
 
 <info:>
 	<footer id="info">
-		<h3>Open this <a href="/{{_groupName}}">ToDo list</a> in another browser, or share it with a friend to collaborate!</h3>
+		<h3>Open this <a href="/{{_groupName}}">app</a> in another browser, or share it with a friend to collaborate!</h3>
 		<p>Click on a todo to edit</p>
-		<p>Template by <a href="http://github.com/sindresorhus">Sindre Sorhus</a></p>
 		<p>Created by <a href="http://micknelson.wordpress.com">Michael Nelson</a> and <a href="https://github.com/lackac">László Bácsi</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
