--- a/site/css/main.css
+++ b/site/css/main.css
@@ -161,6 +161,10 @@ header nav a:first-child {
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
 
+.applist .labs a{
+	color:#666;
+}
+
 .applist .label,
 p .label {
 	position: relative;
