CanJS: Consistency fix for clear button

--- a/architecture-examples/canjs/views/todos.mustache
+++ b/architecture-examples/canjs/views/todos.mustache
@@ -35,7 +35,7 @@
       <a href="#!completed">Completed</a>
     </li>
   </ul>
-  <a href="#!" id="clear-completed" class="{{^todos.completed}}hidden{{/todos.completed}}">
-    Clear {{todos.completed}} completed {{plural "item" todos.completed}}
-  </a>
+  <button id="clear-completed" class="{{^todos.completed}}hidden{{/todos.completed}}">
+    Clear completed ({{todos.completed}})
+   </button>
 </footer>
