--- a/labs/dependency-examples/canjs_require/views/todos.mustache
+++ b/labs/dependency-examples/canjs_require/views/todos.mustache
@@ -30,6 +30,6 @@
     <li><a href="#!completed">Completed</a></li>
   </ul>
   <button id="clear-completed" class="{{^todos.completed}}hidden{{/todos.completed}}">
-    Clear {{todos.completed}} completed {{plural "item" todos.completed}}
+    Clear completed ({{todos.completed}})
   </button>
 </footer>
