canjs_require: Fixed remaining item count

--- a/labs/dependency-examples/canjs_require/views/todos.mustache
+++ b/labs/dependency-examples/canjs_require/views/todos.mustache
@@ -22,7 +22,7 @@
 
 <footer id="footer" class="{{^todos}}hidden{{/todos}}">
   <span id="todo-count">
-    <strong>{{todos.remaining}}</strong> {{plural "item" todos.remaining}} left
+    <strong>{{todos.remaining}}</strong> {{todoPlural "item" todos.remaining}} left
   </span>
   <ul id="filters">
     <li><a class="selected" href="#!">All</a></li>
