--- a/template/index.html
+++ b/template/index.html
@@ -4,12 +4,9 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>Template • TodoMVC</title>
-		<link rel="stylesheet" href="../assets/base.css">
+		<link rel="stylesheet" href="components/todomvc-common/base.css">
 		<!-- CSS overrides - remove if you don't need it -->
 		<link rel="stylesheet" href="css/app.css">
-		<!--[if IE]>
-		<script src="../assets/ie.js"></script>
-		<![endif]-->
 	</head>
 	<body>
 		<section id="todoapp">
@@ -58,6 +55,7 @@
 						<a href="#/completed">Completed</a>
 					</li>
 				</ul>
+				<!-- Hidden if no completed items are left ↓ -->
 				<button id="clear-completed">Clear completed (1)</button>
 			</footer>
 		</section>
@@ -70,7 +68,7 @@
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 		<!-- Scripts here. Don't remove this ↓ -->
-		<script src="../assets/base.js"></script>
+		<script src="components/todomvc-common/base.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
