Updated project to TroopJS 2.x * Fix jshint errors. * Clean bower_components. * Update global, remove local learn.json. * Only edit when dblclick on `.view label`. * Update title from Template -> TroopJS. * Use .toggle (to simplify reading the code). * Add support for ESC_KEY during edit. * Escape title in template. * Use unminified versions of components. * Remove comments from html. * Remove `type` from script attribute. * Remove `baseUrl` from requirejs config. * Convert double to single quotes for javascript (in index.html). * Move troopjs -> troopjs_require and update the main index.html file to reflect updates in the framework. * Use `.focus()` instead of `.select()`. * Use Array natives for iteration. * Remove redundant package configuration. * `else` and `else if` on the same row as bracket. * No space before `:`. * Break `define` into multiple rows. * Simplify filter. * Stay consistent with anonymous function usage. * Add newlines. * Apply the same fix as in tastejs/todomvc@dca5107. * Don't quote keys. * Remove self evident comments. * Update storage code to _always_ restore UI on fail.

--- a/labs/dependency-examples/troopjs_require/css/app.css
+++ b/labs/dependency-examples/troopjs_require/css/app.css
@@ -1,4 +1,8 @@
 /* base.css overrides */
+#footer, #main {
+	display: none;
+}
+
 .filter-active .completed,
 .filter-completed .active {
 	display: none;
