--- a/architecture-examples/polymer/app/app.css
+++ b/architecture-examples/polymer/app/app.css
@@ -20,14 +20,14 @@ body {
 	font-smoothing: antialiased;
 }
 
-body > section {
-	position: relative;
-	margin: 130px 0 40px 0;
+body > header {
+  padding-top: 22px;
+  margin-bottom: -5px;
 }
 
 h1 {
-	position: absolute;
-	top: -120px;
+  /*	position: absolute;
+	top: -120px;*/
 	width: 100%;
 	font-size: 70px;
 	font-weight: bold;
@@ -185,6 +185,12 @@ hr {
 	transition-duration: 500ms;
 }
 
+
+/* IE doesn't support the hidden attribute */
+[hidden] {
+	display: none;
+}
+
 @media (min-width: 899px) {
 	/**body*/.learn-bar {
 		width: auto;
@@ -193,7 +199,7 @@ hr {
 	/**body*/.learn-bar > .learn {
 		left: 8px;
 	}
-	/**body*/.learn-bar > section {
+	/**body*/.learn-bar #todoapp {
 		width: 550px;
 		margin: 130px auto 40px auto;
 	}
