--- a/architecture-examples/polymer/elements/td-todos.css
+++ b/architecture-examples/polymer/elements/td-todos.css
@@ -27,7 +27,12 @@ input::-webkit-input-placeholder {
 	font-style: italic;
 }
 
-input:-moz-placeholder {
+input::-moz-placeholder {
+	font-style: italic;
+	color: #a9a9a9;
+}
+
+input:-ms-input-placeholder, #new-todo:-ms-input-placeholder {
 	font-style: italic;
 	color: #a9a9a9;
 }
@@ -218,7 +223,7 @@ label[for='toggle-all'] {
 	text-decoration: none;
 }
 
-#filters li.selected a {
+#filters li.polymer-selected a {
 	font-weight: bold;
 }
 
@@ -242,6 +247,11 @@ label[for='toggle-all'] {
 @media screen and (-webkit-min-device-pixel-ratio:0) {
 	#toggle-all {
 		background: none;
+    /* 
+      ShadowDOM Polyfill work around for webkit/blink bug 
+      https://code.google.com/p/chromium/issues/detail?id=251510
+    */
+    background-color: transparent;
 	}
 
 	#toggle-all {
