Remove Chrome Frame thingy

--- a/labs/architecture-examples/socketstream/client/views/app.html
+++ b/labs/architecture-examples/socketstream/client/views/app.html
@@ -3,7 +3,7 @@
 <head>
 	<SocketStream>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>SocketStream • TodoMVC</title>
 </head>
 <body>
