Durandal: Link and style fixes

--- a/labs/dependency-examples/durandal/js/views/shell.html
+++ b/labs/dependency-examples/durandal/js/views/shell.html
@@ -1,6 +1,6 @@
-﻿<div>
+<div>
 	<div>
-		<!--ko compose: { 
+		<!--ko compose: {
 			model: router.activeItem, // wiring the router
 			afterCompose: router.afterCompose, // wiring the router
 			cacheViews: true // telling composition to keep views in the dom, and reuse them (only a good idea with singleton view models)
@@ -8,7 +8,7 @@
 	</div>
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
-		<p>Original Knockout version from <a href="https://github.com/abhinavgujjar/durandal-todos">Abhinav Gujjar</a></p>
+		<p>Written by <a href="https://github.com/abhinavgujjar">Abhinav Gujjar</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
 </div>
