make legend on home page more helpful by moving and restyling
style "Maroon" in the legend like the labs items it refers to

make the legend stand apart from the list more

and refactor the .labs-example styles

The `<b>` element is perfectly legitimate here: http://www.whatwg.org/specs/web-apps/current-work/multipage/text-level-semantics.html#the-b-element . I am making the '*'s stand out more without conveying extra importance or alternate voice or mood.

style legend with a grey border

to show that it's a different type of content from the lists above

also changed from a `div` with `p`s to a `ul`, as that matches semantics more closely

move legend under the first app list

and remove grey border around legend, since the legend is prominent enough now without it

done at request of https://github.com/tastejs/todomvc/pull/675#issuecomment-23901896

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -170,12 +170,12 @@ header nav a:not(:last-child) {
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
 
-.applist .labs a{
-	color:#582C42;
+.applist .labs a, .labs-example {
+	color: #582C42;
 }
 
 .applist .label,
-p .label {
+.legend .label {
 	position: relative;
 	top: -3px;
 	font-size: 9px;
@@ -194,6 +194,23 @@ p .label {
 	-ms-columns: 2;
 	-o-columns: 2;
 	columns: 2;
+}
+
+.legend {
+	margin-top: 20px;
+	margin-left: 0;
+	list-style-type: none;
+}
+
+.legend li {
+	margin-bottom: 0.5em;
+}
+.legend li:last-child {
+	margin-bottom: 0;
+}
+
+.labs-example {
+	font-weight: bold;
 }
 
 .collapsed {
