--- a/site-assets/main.css
+++ b/site-assets/main.css
@@ -9,7 +9,7 @@ body {
 	font-weight: 300;
 	line-height: 1.5;
 	width: auto;
-	background: #EAEAEA url('../assets/bg.png');
+	background: #EAEAEA url('../site-assets/bg.png');
 	color: #4D4D4D;
 	-webkit-font-smoothing: antialiased;
 	-moz-font-smoothing: antialiased;
